argo-cd/kafdrop/kafdrop-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: kafdrop
  labels:
    app: kafdrop
spec:
  containers:
    - name: kafdrop
      image: obsidiandynamics/kafdrop
      ports:
        - containerPort: 9000
