argo-cd/kafdrop/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop-service
spec:
  type: NodePort
  selector:
    app: kafdrop
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
