argo-cd/kafdrop/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    #ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: /kafdrop
            pathType: Prefix
            backend:
              service:
                name: kafdrop-service
                port:
                  number: 9000
